Fixed the absolute path issue.

--- a/Code/Back_End/PlanGenerationAlgorithm/PlanGenerationAlgorithm.csproj
+++ b/Code/Back_End/PlanGenerationAlgorithm/PlanGenerationAlgorithm.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\Users\nicol\Desktop\Stuff\school\1_Winter18\CS481\cwu-cs-advising\Code\output\</OutputPath>
-    <DocumentationFile>C:\Users\nicol\Desktop\Stuff\school\1_Winter18\CS481\cwu-cs-advising\Code\output\Documentation\Algorithm.xml</DocumentationFile>
+    <OutputPath>..\output\netcoreapp2.0\</OutputPath>
+    <DocumentationFile>..\output\Documentation\Algorithm.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
