--- a/Code/Database_Classes/Database_Classes.csproj
+++ b/Code/Database_Classes/Database_Classes.csproj
@@ -5,10 +5,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\nicol\Desktop\Stuff\school\1_Winter18\CS481\cwu-cs-advising\Code\output\Documentation\DatabaseClasses.xml</DocumentationFile>
+    <DocumentationFile>..\output\Documentation\DatabaseClasses.xml</DocumentationFile>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
-    <OutputPath>C:\Users\nicol\Desktop\Stuff\school\1_Winter18\CS481\cwu-cs-advising\Code\output\</OutputPath>
+    <OutputPath>..\output\netcoreapp2.0\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
