--- a/Code/Database_Classes/Database_Classes.csproj
+++ b/Code/Database_Classes/Database_Classes.csproj
@@ -9,6 +9,7 @@
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <OutputPath>..\output\netcoreapp2.0\</OutputPath>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
