--- a/Code/Database_Handler/Database_Handler.csproj
+++ b/Code/Database_Handler/Database_Handler.csproj
@@ -11,6 +11,7 @@
     <Optimize>false</Optimize>
     <OutputPath>..\output\netcoreapp2.0\</OutputPath>
     <DocumentationFile>..\output\Documentation\Database_Handler.xml</DocumentationFile>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +24,7 @@
       <Private>false</Private>
     </Reference>
     <Reference Include="Database_Classes">
-      <HintPath>..\output\netcoreapp2.0\netcoreapp2.0\Database_Classes.dll</HintPath>
+      <HintPath>..\output\netcoreapp2.0\Database_Classes.dll</HintPath>
     </Reference>
     <Reference Include="Db4objects.Db4o">
       <HintPath>..\output\netcoreapp2.0\Dependencies\Db4objects.Db4o.dll</HintPath>
