--- a/Code/Front_End/CwuAdvising.csproj
+++ b/Code/Front_End/CwuAdvising.csproj
@@ -6,6 +6,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DocumentationFile>..\output\Documentation\WebsiteDoc.xml</DocumentationFile>
     <OutputPath>..\output\netcoreapp2.0\</OutputPath>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
