--- a/Code/Front_End/CwuAdvising.csproj
+++ b/Code/Front_End/CwuAdvising.csproj
@@ -23,4 +23,7 @@
       <HintPath>..\output\netcoreapp2.0\Database_Handler.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\Roboto\" />
+  </ItemGroup>
 </Project>
