--- a/Code/Back_End/PlanGenerationAlgorithm/PlanGenerationAlgorithm.csproj
+++ b/Code/Back_End/PlanGenerationAlgorithm/PlanGenerationAlgorithm.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -9,6 +12,7 @@
     <DocumentationFile>..\..\output\Documentation\Algorithm.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	<NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
