--- a/Code/Database_Handler/Database_Handler.csproj
+++ b/Code/Database_Handler/Database_Handler.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="MySql.Data" Version="6.10.5" />
   </ItemGroup>
 
